<resources>
    <string name="app_name">ScanSist™</string>
    <string name="app_download">Latest ScanSist™ Download</string>
    <string name="scan">Scan Barcode</string>
    <string name="scan_about">About</string>
    <string name="scan_settings">Settings</string>
    <string name="scan_licence">Software Licence</string>

    <string name="turn_on_flashlight">Flash On</string>
    <string name="turn_off_flashlight">Flash Off</string>
    <string name="action_back">Back</string>
    <string name="action_home">Home</string>
    <string name="action_camera">Camera</string>
    <string name="action_flash">Flash</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about">Help &amp; About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_licence">Licence</string>

    <string name="title">Title</string>
    <string name="manifest_date">Scan Date:</string>
    <string name="manifestDate">(DD/MM/YY)</string>

    <string name="scan_freight">Scan Warehouse Goods</string>
    <string name="scan_pause">Pause</string>
    <string name="scan_resume">Resume</string>
    <string name="progress_title">ScanSist™ - Barcode Scannng Assistant</string>
    <!-- Scan Menu-->
    <string name="into_location">Scan Goods Into Rack Location</string>
    <string name="into_location_direction">X</string>
    <string name="into_location_status">DSI</string>

    <string name="check_rack_goods">Check Goods at Rack Location</string>
    <string name="check_rack_goods_direction">T</string>
    <string name="check_rack_goods_status">DSO</string>

    <string name="check_goods">Check Goods</string>
    <string name="check_goods_direction">D</string>
    <string name="check_goods_status">SCDV</string>

    <string name="goods_out">Check Goods Out</string>
    <string name="goods_out_direction">D</string>
    <string name="_goods_out_location_status">SCDV</string>



    <string name="action_barcode">Scan</string>
    <!-- Wizard Buttons -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <!-- Dialogue Buttons -->
    <string name="confirm_exit">Confirm ScanSist™ Exit</string>
    <string name="confirm_cancel">Confirm ScanSist™ Cancel</string>
    <string name="confirm_finish">Confirm ScanSist™ Finish</string>
    <string name="confirm_clear">Confirm ScanSist™ Clear</string>
    <string name="confirm_message_exit">Are you sure you want to exit the app?</string>
    <string name="confirm_message_cancel">Are you sure you want to cancel the app?</string>
    <string name="confirm_message_finish">Are you sure you want to finish?</string>
    <string name="confirm_message_clear">You must clear\nthe previous scanned jobs to continue\nThe Manifest date cannot be earlier than today!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- About Dialog -->
    <string name="about_version">ver.</string>
    <string name="about_description">ScanSist™ is an easy-to-use app with the benefit of contractless monthly payments. This all encompassing app will reduce the number of FTA\'s and can help reduce KPI fines.</string>
    <string name="licence_description">Copyright  &#169; 2020 RentUrApp™\nhttps://www.renturapp.com/scansist/eula.html\n\nThe Software is commercially licensed software and not open-source, freeware or shareware. The Software is a copyright work of authorship and is also protected under applicable database laws.</string>

    <string name="about_detail">
        &#160;&#160;&#160;ScanSist™ Provides:\n
        ● Downloadable Android app from web link provided by RentUrApp™.\n
        ● No additional hardware required.\n
        ● Clause and discrep Pallet/Parcels when required.\n
        ● Available for customers to scan into hub if direct input.\n\n
        &#160;&#160;&#160;Advantages of ScanSist™:\n
        ● No Setup costs, can use existing Android hardware.\n
        ● Keeps track of all freight into and out of hub and onto delivery vehicles.\n
        ● Reduces the number of FTA\'s.\n
        ● Minimises errors across the system.\n
        ● Increases productivity across the workforce.\n</string>
    <string name="about_ok">Close</string>
    <string name="scannerID">Scanner ID:</string>
    <string name="depotNumber">Depot Number:</string>
    <string name="androidID">Android ID:</string>
    <string name="scan_login">ScanSist™ Registration</string>
    <string name="register_scansist">Register Depot</string>
    <string name="depotNumberValue">00042</string>
    <string name="depotNumberInfo">Enter your Depot Number to register the ScanSist™ app to your company.\n\nYou can select 00042 to register the demo version.\n\nChoose the correct Hazchem Depot Number for your company. Charges will apply once your ScanSist™ app is registered.</string>
    <string name="companyName">Company Name</string>
</resources>
