<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/scan_freight"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rBtnG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rBtnIntoLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="250sp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/into_location" />

        <RadioButton
            android:id="@+id/rBtnCheckRackGoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="250sp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/check_rack_goods" />

        <RadioButton
            android:id="@+id/rBtnCheckGoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="250sp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/check_goods" />

        <RadioButton
            android:id="@+id/rBtnGoodsOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="250sp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/goods_out" />
    </RadioGroup>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <Spinner
        android:id="@+id/spnRack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblManifestDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="10sp"
            android:text="@string/manifest_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtManifestDate"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:clickable="false"
            android:hint="@string/manifestDate"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

    <include layout="@layout/wizardbuttons" />
</LinearLayout>
