<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblTitleRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/scan_login"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDepotNumberInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTitleRegister"
        android:layout_marginLeft="5sp"
        android:text="@string/depotNumberInfo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblDepotNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5sp"
            android:text="@string/depotNumber"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtDepotNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="2sp"
            android:hint="@string/depotNumberValue"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="8sp"
            android:selectAllOnFocus="true"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegisterScanSist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/register_scansist" />
</RelativeLayout>