<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblTitleLicence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/scan_licence"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/id_licence_scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/btnLicence"
        android:layout_below="@id/lblTitleLicence">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_licence_textView_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:autoLink="web"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/licence_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/id_licence_textView_description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"

                android:gravity="left"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnLicence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/about_ok" />
</RelativeLayout>